--- a/script.css
+++ b/script.css
@@ -1,6 +1,6 @@
 #header{
     text-align: center;
-    font-size: 35;
+    font-size: 45;
     background-color: whitesmoke;
     padding-bottom: 18px;
 }
@@ -10,9 +10,7 @@ footer{
     background-color: whitesmoke;
 }
 
-/*#ridinger_pic1{
-    width: 350px;
-}*/
+
 
 #navbar a{
    background-color: #E3E3E3;
@@ -24,4 +22,22 @@ footer{
 
 #navbar a:hover{
 background-color: #adadad;
+}
+
+
+
+#bio{
+    width: 600px;
+}
+
+#info{
+    font-size: 20px;
+}
+
+#ridingerpic2{
+    float: left;
+    width: 600px;
+    border: 2px solid black;
+    
+    
 }
