--- a/main.css
+++ b/main.css
@@ -47,9 +47,12 @@ background-color: #adadad;
 
 
 #ridingerpic2{
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
     border: 2px solid black;
     margin-left: 25%; 
+    display: block;
+    margin: 0 auto;
 }
 
 #logo{
